app/overlays/prod/prod-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
#  namespace: prod-namespace
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - django.homeline.kg
    secretName: django-prod-tls
  rules:
  - host: django.homeline.kg
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: prod-sample-django
            port:
              number: 8000
